@@ -38,10 +38,12 @@ public class WorkerImpl implements Worker {
         List<Article> result = articles
                 .stream()
                 .filter(this::isArticleCorrect)
-                .toList();
+                .distinct()
+                .collect(Collectors.toList());
         result.forEach(this::prepareDate);
         return result;
     }
+
 
     private boolean isArticleCorrect(Article article) {
         return !(nullOrBlank(article.getTitle()) ||
